--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Lead Engineer</h3>
                             <div class="subheading mb-3">Insentra Pty Ltd | CloudPlus Pty Ltd</div>
-                            <p>Responsible for technical leadership and escalation of Managed Services' Service Desk team, as well as oversee technical process improvements and upskilling of the team. 
-                                Level 3 Engineer primary focused on supporting Microsoft 365, Azure, Citrix, and Windows Servers infrastructure for multiple managed services clients.</p>
+                            <p>Responsible for technical leadership and escalation for Managed Services' Service Desk team, as well as oversee technical process improvements and upskilling of the team. 
+                                Level 3 Engineer primarily focused on supporting Microsoft 365, Azure, Citrix, and Windows Servers infrastructure for multiple managed services clients.</p>
                             <p>Detailed role and skill set <a href=pages/cpsi.html>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2019 - Present</span></div>
@@ -276,7 +276,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Freelance</h3>
-                            <p>Assistance and guidance for beginner programmers in web development courses and activities, developing websites front end and back end, app developments for desktop applications, thesis prototypes, research papers, pc troubleshooting and more.</p>
+                            <p>Assistance and guidance for beginner programmers in web development courses and activities, developing websites, front end and back end, app developments for desktop applications, thesis prototypes, research papers, pc troubleshooting and more.</p>
                             <p>Detailed role and skill set <a href=pages/others.html>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2013 - 2016</span></div>
