--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Lead Engineer</h3>
                             <div class="subheading mb-3">Insentra Pty Ltd | CloudPlus Pty Ltd</div>
-                            <p>Responsible for technical leadership and escalation for Managed Services' Service Desk team, as well as oversee technical process improvements and upskilling of the team. 
-                                Level 3 Engineer primarily focused on supporting Microsoft 365, Azure, Citrix, and Windows Servers infrastructure for multiple managed services clients.</p>
-                            <p>Detailed role and skill set <a href=pages/cpsi.html>here.</a></p>
+                            <p>Responsible for technical leadership and escalation for Managed Services' Service Desk team, as well as oversee technical process improvements and upskilling of the team.</p> 
+                            <p>Level 3 Engineer primarily focused on supporting Microsoft 365 Enterprise, Azure, Citrix, and Windows Servers on an infrastructure level for multiple managed services clients.</p>
+                            <p>Detailed role and skill set <a href=#other>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2019 - Present</span></div>
                     </div>
@@ -242,8 +242,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Remote Support Engineer</h3>
                             <div class="subheading mb-3">Willis Towers Watson | Atos Syntel</div>
-                            <p>Responsible for escalation tickets received from Service Desk's Level 1's and Level 2's. Managing and providing support for internal and corporate applications, multi-forest Active Directory environment through out the client's merging/acquisition process.</p>
-                            <p>Detailed role and skill set <a href=pages/syntel.html>here.</a></p>
+                            <p>Responsible for escalation tickets received from Service Desk's Level 1 and 2.</p>
+                            <p>Managing and providing support for internal and corporate applications, multi-forest Active Directory environment, desktop and virtual infrastructure, through out the client's merging/acquisition process.</p>
+                            <p>Detailed role and skill set <a href=#other>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2018 - October 2019</span></div>
                     </div>
@@ -251,8 +252,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">IT Service Desk, Point of Contact</h3>
                             <div class="subheading mb-3">Alcoa / Arconic | Stefanini Group</div>
-                            <p>Escalation point and subject matter expert for front-line agents, handling supervisor calls and process queries. Responsible for the critical line for Sensitive VIPs and financially impacting issues.</p>
-                            <p>Detailed role and skill set <a href=pages/stefanini.html>here.</a></p>
+                            <p>Escalation point and subject matter expert for front-line agents, handling supervisor calls and process queries in relation to supporting the client's environment throughout their separation process.</p>
+                            <p>Responsible for the critical line for Sensitive VIPs and financially impacting issues.</p>
+                            <p>Detailed role and skill set <a href=#other>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2016 - October 2018</span></div>
                     </div>
@@ -261,7 +263,7 @@
                             <h3 class="mb-0">Technical Support Representative</h3>
                             <div class="subheading mb-3">Sony Consumer Electronics | Sykes Asia</div>
                             <p>Front Line Technical Support for Sony Consumer Electronics, primarily responsible in providing technical assistance to all consumer electronic devices for all consumers located across US and Canada.</p>
-                            <p>Detailed role and skill set <a href=pages/sykes.html>here.</a></p>
+                            <p>Detailed role and skill set <a href=#other>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2015 - July 2016</span></div>
                     </div>
@@ -269,8 +271,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Intern</h3>
                             <div class="subheading mb-3">Inland Corporation</div>
-                            <p>Internship role as a graduation requirement for Bachelor course. Primarily focused in assisting corporate users and developing the internal Purchase Requisition System.</p>
-                            <p>Detailed role and skill set <a href=pages/others.html>here.</a></p>
+                            <p>Internship role as a graduation requirement for Bachelor course. Primarily focused in assisting corporate users and developing the internal Purchase Requisition System using C# language.</p>
+                            <p>Detailed role and skill set <a href=#other>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2014 - March 2015</span></div>
                     </div>
@@ -278,7 +280,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Freelance</h3>
                             <p>Assistance and guidance for beginner programmers in web development courses and activities, developing websites, front end and back end, app developments for desktop applications, thesis prototypes, research papers, pc troubleshooting and more.</p>
-                            <p>Detailed role and skill set <a href=pages/others.html>here.</a></p>
+                            <p>Detailed role and skill set <a href=#other>here.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2013 - 2016</span></div>
                     </div>
@@ -333,7 +335,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Pluralsight</h3>
                             <div class="subheading mb-3">Self-paced courses</div>
-                            <div> <a href="https://app.pluralsight.com/profile/janeannilagan" target = "_blank">Visit Profile</a> </div>
+                            <div>Visit <a href="https://app.pluralsight.com/profile/janeannilagan" target = "_blank">Profile</a> to see verified skills and in progress courses. </div>
                             
 
                         </div>
@@ -362,8 +364,8 @@
       <!-- Interested-->
       <section class="resume-section" id="other">
         <div class="resume-section-content">
-            <h2 class="mb-5">Interested to work with me?</h2>
-            <p>If you're interested to see my detailed resume, please see this <a href="https://drive.google.com/drive/folders/1lcQy6wr3-njKbXswBm-upROkcxLbX9JV?usp=sharing">link</a> to request access from my Google Drive.</p>
+            <h2 class="mb-5">Details</h2>
+            <p>If you're interested to see my detailed resume, please see this <a href="https://drive.google.com/drive/folders/1lcQy6wr3-njKbXswBm-upROkcxLbX9JV?usp=sharing">link</a> to view the detailed file using Google Drive.</p>
           <p class="mb-0"></p>
         </div>
     </section>
