--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
          <section class="resume-section" id="hobbies">
             <div class="resume-section-content">
                 <h2 class="mb-5">Hobbies</h2>
-                <p>I spend a few hours of my regular week learning about new technologies that fascinate me.</p>
+                <p>I typically spend a few hours of my regular week learning about new technologies that fascinate me.</p>
                 <p>Aside from being a techy, I spend my free time playing with my rescue cats. Their names are Fish, Shrimp, Shark and Stingray.</p>
                 <p>If my cats prefer to be left alone, I spend the rest of my time fangirling to my favorite KPOP groups or writing short novels under an anonymous penname online.</p>
                 <p class="mb-0"></p>
@@ -365,7 +365,7 @@
       <section class="resume-section" id="other">
         <div class="resume-section-content">
             <h2 class="mb-5">Details</h2>
-            <p>If you're interested to see my detailed resume, please see this <a href="https://drive.google.com/drive/folders/1lcQy6wr3-njKbXswBm-upROkcxLbX9JV?usp=sharing">link</a> to view the detailed file using Google Drive.</p>
+            <p>If you're interested to see my detailed resume, please see this <a href="https://drive.google.com/drive/folders/1lcQy6wr3-njKbXswBm-upROkcxLbX9JV?usp=sharing">link</a> to view the detailed file via Google Drive.</p>
           <p class="mb-0"></p>
         </div>
     </section>
