--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/janeannilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/janeannilagan" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.credly.com/users/jane-ann-ilagan/badges" target="_blank"><i class="fab fa-leanpub"></i></i></a>
+                        <!-- <a class="social-icon" href="https://www.credly.com/users/jane-ann-ilagan/badges" target="_blank"><i class="fas fa-medal"></i></i></a>--->
                         <a class="social-icon" href="mailto:janeannilagan@gmail.com"><i class="fas fa-at"></i></a>
                     </div>
                 </div>
