--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <section class="resume-section" id="other">
         <div class="resume-section-content">
             <h2 class="mb-5">Details</h2>
-            <p>If you're interested to see my detailed resume, please see this <a href="https://drive.google.com/drive/folders/1lcQy6wr3-njKbXswBm-upROkcxLbX9JV?usp=sharing">link</a> to view the detailed file via Google Drive.</p>
+            <p>If you're interested to see my detailed resume, please see this <a href="https://drive.google.com/drive/folders/1lcQy6wr3-njKbXswBm-upROkcxLbX9JV?usp=sharing">link</a> to leave a message and view the detailed file via Google Drive.</p>
           <p class="mb-0"></p>
         </div>
     </section>
