--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Curriculum Vitae - Jane Ann Ilagan</title>
+        <title>Curriculum Vitae - Jane Ilagan</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Jane Ann Ilagan</span>
+                <span class="d-block d-lg-none">Jane Ilagan</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -42,7 +42,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Jane Ann
+                        Jane
                         <span class="text-primary">Ilagan</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -51,10 +51,10 @@
                     <p class="lead mb-5">I'm an IT enthusiast with seven years of experience in the field, focused on technical leadership, system administration, engineering, and modern workplace technology.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/janeannilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/janeannilagan" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/janeilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/janeilagan" target="_blank"><i class="fab fa-github"></i></a>
                         <!-- <a class="social-icon" href="https://www.credly.com/users/jane-ann-ilagan/badges" target="_blank"><i class="fas fa-medal"></i></i></a>--->
-                        <a class="social-icon" href="mailto:janeannilagan@gmail.com"><i class="fas fa-at"></i></a>
+                        <a class="social-icon" href="mailto:jane-ilagan@outlook.com"><i class="fas fa-at"></i></a>
                     </div>
                 </div>
             </section>
@@ -335,7 +335,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Pluralsight</h3>
                             <div class="subheading mb-3">Self-paced courses</div>
-                            <div>Visit <a href="https://app.pluralsight.com/profile/janeannilagan" target = "_blank">Profile</a> to see verified skills and in progress courses. </div>
+                            <div>Visit <a href="https://app.pluralsight.com/profile/janeilagan" target = "_blank">Profile</a> to see verified skills and in progress courses. </div>
                             
 
                         </div>
