--- a/index.html
+++ b/index.html
@@ -206,11 +206,12 @@
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="https://www.credly.com/badges/fdf3cdf1-7db0-4043-9d62-d45356a5f7df" target = "_blank">Microsoft 365 Certified: Messaging Administrator Associate</a>
                         </li>
-                          <!-- Next items on my list!
+                          
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            <a href="#" target = "_blank">Microsoft 365 Certified: Enterprise Administrator</a>
+                            <a href="https://www.credly.com/badges/2a616bfa-7e50-46ac-90b8-c3b51568b6f4/" target = "_blank">Microsoft 365 Certified: Enterprise Administrator</a>
                         </li>
+                        <!-- Next items on my list!
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="#" target = "_blank">Microsoft Certified: Azure Administrator Associate</a>
