--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiences</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#hobbies">Hobbies</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#other">-</a></li>
@@ -75,14 +75,14 @@
                             <div class="col-md-9">
                                 <h3 class="progressbar-title subheading">Microsoft Azure</h3>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
                                 </div>
 
                                 <div><br></div>
 
                                 <h3 class="progressbar-title subheading">Microsoft 365 Enterprise</h3>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 83%;"></div>
+                                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
                                 </div>
 
                                 <div><br></div>
@@ -96,7 +96,7 @@
 
                                 <h3 class="progressbar-title subheading">Server Administration and Management</h3>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 69%;"></div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 59%;"></div>
                                 </div>
 
                                 <div><br></div>
@@ -110,7 +110,7 @@
 
                                 <h3 class="progressbar-title subheading">Web Development and Scripting</h3>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 79%;"></div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 59%;"></div>
                                 </div>
 
                                 <div><br></div>
@@ -300,7 +300,7 @@
                             <p>2013-2015</p>
                            
                             <div>BSIT Department President</div>
-                            <p>2013-2015</p>
+                            <p>2013-2014</p>
                             
                             <div>Capstone Project, Main Programmer and Thesis Lead</div>
                             <p>GPA: 1.25</p>
