--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            <a href="#" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
+                            <a href="https://www.credly.com/badges/1d7f772d-235b-4eb8-8243-440579477138" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
                         </li>
                         
                         <!-- Next items on my list!
