--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="https://www.credly.com/badges/1d7f772d-235b-4eb8-8243-440579477138" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-medal"></i></span>
+                            <a href="https://verify.skilljar.com/c/9k3fsyeaophm" target = "_blank">LogicMonitor Certified Associate</a>
+                        </li>
                         
                         <!-- Next items on my list!
                         <li>
@@ -369,6 +373,7 @@
             <h2 class="mb-5">Details</h2>
             <p>If you're interested to know my detailed work experience, character references or want to chat about cats, please don't hesitate to drop me a <a class="social-icon" href="mailto:jane-ilagan@outlook.com"><i class="far fa-paper-plane"></i></a>
             <p class="mb-0"></p>
+           <small><p>Version update: 03 Mar 2022 20:12 PH </p></small>
         </div>
     </section>
     <hr class="m-0" />
