--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Curriculum Vitae - Jane Ilagan</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
@@ -54,6 +54,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/janeilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/janeilagan" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="mailto:jane-ilagan@outlook.com"><i class="fas fa-at"></i></a>
+                        <a class="social-icon" href="./assets/janeilagan-github-io-resume-.pdf"><i class="fa-solid fa-file-pdf"></i></a>
                     </div>
                 </div>
             </section>
@@ -374,6 +375,8 @@
             <p>If you're interested to know my detailed work experience, character references or want to chat about cats, please don't hesitate to drop me a <a class="social-icon" href="mailto:jane-ilagan@outlook.com"><i class="far fa-paper-plane"></i></a>
             <p class="mb-0"></p>
            <small><p>Version update: 03 Mar 2022 20:12 PH </p></small>
+           <small><p>Download PDF version. Powered by <a href="https://www.web2pdfconvert.com/" target="_blank">w2p</a> </p></small>
+
         </div>
     </section>
 
