--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="subheading mb-5">
                         Mandaluyong City · Metro Manila, PH · (02) 8731-5692 
                     </div>
-                    <p class="lead mb-5">I'm an IT enthusiast with seven years of experience in the field, focused on technical leadership, system administration, engineering, and modern workplace technology.
+                    <p class="lead mb-5">I'm an IT enthusiast with seven years of experience in the field, focused on technical leadership, system administration and engineering.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/janeilagan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -118,7 +118,7 @@
 
                                 <h3 class="progressbar-title subheading">Modern Workplace Technology</h3>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 88%;"></div>
+                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 69%;"></div>
                                 </div>
 
                                 <div><br></div>
