--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
+                            <a href="https://www.credly.com/badges/1e9e1d25-9deb-481f-a719-7a4147e7f3c2/public_url" target = "_blank">Microsoft Certified: Microsoft Certified: Azure Data Fundamentals</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-medal"></i></span>
+                            <a href="https://www.credly.com/badges/0cdb7d3e-5bb7-4136-86f7-54c2bbb2ef11/public_url8" target = "_blank">Microsoft Certified: Power Platform Fundamentals</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="https://verify.skilljar.com/c/9k3fsyeaophm" target = "_blank">LogicMonitor Certified Associate</a>
                         </li>
                         
@@ -236,13 +244,23 @@
                     <h2 class="mb-5">Experiences</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Microsoft 365 Technical Lead</h3>
+                            <div class="subheading mb-3">Insentra Pty Ltd | CloudPlus Pty Ltd</div>
+                            <p>Microsoft 365 Technical Lead primarily focused on supporting Microsoft 365 Enterprise and Azure for multiple managed services clients.</p>
+                            <p>Responsible for technical leadership and escalation for Managed Services' Service Desk team, as well as oversee technical process improvements and upskilling of the team.</p> 
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - Present</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Lead Engineer</h3>
                             <div class="subheading mb-3">Insentra Pty Ltd | CloudPlus Pty Ltd</div>
                             <p>Responsible for technical leadership and escalation for Managed Services' Service Desk team, as well as oversee technical process improvements and upskilling of the team.</p> 
                             <p>Level 3 Engineer primarily focused on supporting Microsoft 365 Enterprise, Azure, Citrix, and Windows Servers on an infrastructure level for multiple managed services clients.</p>
                             
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">October 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2019 - April 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -374,7 +392,7 @@
             <h2 class="mb-5">Details</h2>
             <p>If you're interested to know my detailed work experience, character references or want to chat about cats, please don't hesitate to drop me a <a class="social-icon" href="mailto:jane-ilagan@outlook.com"><i class="far fa-paper-plane"></i></a>
             <p class="mb-0"></p>
-           <small><p>Version update: 03 Mar 2022 20:12 PH </p></small>
+           <small><p>Version update: 20 May 2022 20:12 PH </p></small>
         </div>
     </section>
 
