--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-9">
-                                <h3 class="progressbar-title subheading">Tecnical Leadership</h3>
+                                <h3 class="progressbar-title subheading">Technical Leadership</h3>
                                 <div class="progress">
                                     <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 82%;"></div>
                                 </div>
