--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            <a href="https://www.credly.com/badges/1e9e1d25-9deb-481f-a719-7a4147e7f3c2/public_url" target = "_blank">Microsoft Certified: Microsoft Certified: Azure Data Fundamentals</a>
+                            <a href="https://www.credly.com/badges/1e9e1d25-9deb-481f-a719-7a4147e7f3c2/public_url" target = "_blank">Microsoft Certified: Azure Data Fundamentals</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
