--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
-                            <a href="https://www.credly.com/badges/2a616bfa-7e50-46ac-90b8-c3b51568b6f4/" target = "_blank">Microsoft 365 Certified: Enterprise Administrator</a>
+                            <a href="https://www.credly.com/badges/2a616bfa-7e50-46ac-90b8-c3b51568b6f4/" target = "_blank">Microsoft 365 Certified: Enterprise Administrator Expert</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
