--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
+                            <a href="https://www.credly.com/badges/783d6d01-1fc7-40ed-b3f0-a88cfd9fec63/public_url" target = "_blank">Microsoft Certified: Identity and Access Administrator Associate</a>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="https://www.credly.com/badges/734874f7-edcd-4df9-a022-f6a58fc5166b" target = "_blank">Microsoft Certified: Azure Fundamentals</a>
                         </li>
                         <li>
@@ -226,6 +230,8 @@
                             <span class="fa-li"><i class="fas fa-medal"></i></span>
                             <a href="https://www.credly.com/badges/0cdb7d3e-5bb7-4136-86f7-54c2bbb2ef11/public_url8" target = "_blank">Microsoft Certified: Power Platform Fundamentals</a>
                         </li>
+                        
+
                     </ul>  
                         <!-- Next items on my list!
                         <li>
@@ -286,8 +292,8 @@
                             <h3 class="mb-0">Microsoft 365 Systems Engineer Lead</h3>
                             <div class="subheading mb-3"><a href="https://www.blueapache.com/" target = "_blank">blueAPACHE</a> | <a href="https://connectos.co/" target = "_blank">ConnectOS</a></div>
                             <p>Microsoft 365 Systems Engineer Lead primarily focused on delivering Microsoft 365 services to Managed Services clients.</p>
-                            <p>Works alongside Microsoft Services Lead in improving and building internal IPs, templates and scripts to automate and reduce admin overhead in supporting Microsoft 365 tenants. </p>
-                            <p>Responsible for technical leadership, consultation and escalation for Microsoft 365 space.</p> 
+                            <p>Works alongside Microsoft 365 Services Lead in improving and building internal IPs, templates and scripts to automate and reduce admin overhead in supporting Microsoft 365 tenants. </p>
+                            <p>Responsible for technical leadership, consultation, project designs, and escalation for Microsoft 365 space.</p> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2022 - Present</span></div>
                     </div>
