--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <h2 class="mb-5">Connect</h2>
             <p>If you're interested to know my about detailed work experience, character references or want to chat about cats in general, please don't hesitate to drop me a <a class="social-icon" href="mailto:jane.ilagan@outlook.ph"><i class="far fa-paper-plane"></i></a>
             <p class="mb-0"></p>
-           <small><p>Version update: 2022-11-15 14:37:12 </p></small>
+           <small><p>Version update: 2022-Dec-09 07:54PH </p></small>
         </div>
     </section>
 
