update on image hovers

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                           <img src="https://images.credly.com/size/340x340/images/dfa4cb20-16ed-42ca-90a5-6528b62ee651/microsoft365-enterprise-adminstrator-expert-600x600.png" height="80px">
+                           <img src="https://images.credly.com/size/340x340/images/dfa4cb20-16ed-42ca-90a5-6528b62ee651/microsoft365-enterprise-adminstrator-expert-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/2a616bfa-7e50-46ac-90b8-c3b51568b6f4/" target = "_blank">Microsoft 365 Certified: Enterprise Administrator Expert</a>
                         </li>
 
@@ -213,19 +213,19 @@
                         </li>
                      -->
                      <li>
-                        <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="80px">
+                        <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="75px">
                         <a href="https://www.credly.com/badges/e74e1597-9bd6-44c8-941c-94d38276839d" target = "_blank">Microsoft 365 Certified: Teams Administrator Associate</a>
                      </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/59db067c-f0e9-44a8-bcc7-53a960274bfb/CERT-Associate-Microsoft365-Teams-Administrator.png" height="75px">
                             <a href="https://www.credly.com/badges/4991e4ad-d5fd-45ff-b652-a91fc270081f" target = "_blank">Microsoft 365 Certified: Messaging Administrator Associate</a>
                         </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/91295436-0704-4b98-8e1a-ef5f937bda21/identity-and-access-administrator-associate-600x600.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/91295436-0704-4b98-8e1a-ef5f937bda21/identity-and-access-administrator-associate-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/783d6d01-1fc7-40ed-b3f0-a88cfd9fec63/public_url" target = "_blank">Microsoft Certified: Identity and Access Administrator Associate</a>
                         </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/7e75516f-5149-4d19-8d09-aa3dab4907cb/security-operations-analyst-associate-600x600.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/7e75516f-5149-4d19-8d09-aa3dab4907cb/security-operations-analyst-associate-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/6ccbe7d4-0436-43a8-a18a-bba508044ced" target = "_blank">Microsoft Certified: Security Operations Analyst Associate</a>
                         </li>
                     <!-- Next Associate level items on my list!
@@ -243,19 +243,19 @@
                         </li>
                      -->
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/be8fcaeb-c769-4858-b567-ffaaa73ce8cf/image.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/be8fcaeb-c769-4858-b567-ffaaa73ce8cf/image.png" height="75px">
                             <a href="https://www.credly.com/badges/734874f7-edcd-4df9-a022-f6a58fc5166b" target = "_blank">Microsoft Certified: Azure Fundamentals</a>
                         </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/fc1352af-87fa-4947-ba54-398a0e63322e/security-compliance-and-identity-fundamentals-600x600.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/fc1352af-87fa-4947-ba54-398a0e63322e/security-compliance-and-identity-fundamentals-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/1d7f772d-235b-4eb8-8243-440579477138" target = "_blank">Microsoft Certified: Security and Compliance Fundamentals</a>
                         </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/70eb1e3f-d4de-4377-a062-b20fb29594ea/azure-data-fundamentals-600x600.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/70eb1e3f-d4de-4377-a062-b20fb29594ea/azure-data-fundamentals-600x600.png" height="75px">
                             <a href="https://www.credly.com/badges/1e9e1d25-9deb-481f-a719-7a4147e7f3c2/public_url" target = "_blank">Microsoft Certified: Azure Data Fundamentals</a>
                         </li>
                         <li>
-                            <img src="https://images.credly.com/size/340x340/images/2a6251f2-737b-4bf6-9190-d77570cc76fc/CERT-Fundamentals-Power-Platform.png" height="80px">
+                            <img src="https://images.credly.com/size/340x340/images/2a6251f2-737b-4bf6-9190-d77570cc76fc/CERT-Fundamentals-Power-Platform.png" height="75px">
                             <a href="https://www.credly.com/badges/0cdb7d3e-5bb7-4136-86f7-54c2bbb2ef11/public_url8" target = "_blank">Microsoft Certified: Power Platform Fundamentals</a>
                         </li>
                         
@@ -440,14 +440,18 @@
         </div>
         <hr class="m-0" />
          <!-- hobbies-->
+
+
          <section class="resume-section" id="hobbies">
             <div class="resume-section-content">
                 <h2 class="mb-5">Hobbies</h2>
                 <p>I typically spend a few hours of my regular week learning about new technologies that fascinate me.</p>
                 <p>Sometimes, I procrastinate studying by getting lost in the rabbit hole of building my  <a href="https://janeilagan.github.io/digital-garden/" target="_blank">digital garden</a> using <a href="https://obsidian.md/" target="_blank">Obsidian</a> and <a href="https://www.notion.so/" target="_blank">Notion</a>.</p>
                 <p>If my partner permits, I also get into the habit of overspending on home automation even though we obviously don't need it.</p>
-                <p>Aside from being a techy, I spend my free time playing with my rescue cats. Their names are <a href="assets/img/fish.jpg" target="_blank">Fish</a>, <a href="assets/img/shrimp.jpg" target="_blank">Shrimp</a>, <a href="assets/img/shark.jpg" target="_blank">Shark</a> and <a href="assets/img/stingray.jpg" target="_blank">Stingray</a>.</p>
-                <p>If my cats prefer to be left alone, I spend the rest of my time fan-girling to my favorite KPOP groups or writing short novels under an anonymous penname online.</p>
+                <p>Aside from being a techy, I spend my free time playing with my rescue cats. Their names are <a href="assets/img/fish.JPG" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Fish<img class="img-preview" src="assets/img/fish.JPG"></a>, <a href="assets/img/shrimp.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Shrimp<img class="img-preview" src="assets/img/shrimp.jpg"></a>, <a href="assets/img/shark.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Shark<img class="img-preview" src="assets/img/shark.jpg"></a>, and <a href="assets/img/stingray.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">Stingray<img class="img-preview" src="assets/img/stingray.jpg"></a>.</p>
+                <p>You can say I have a <a href="assets/img/aquarium.jpg" onpointerenter="showImage(this)" onpointerleave="hideImage(this)">cat aquarium<img class="img-preview" src="assets/img/aquarium.jpg"></a>.</p>
+                <p>If my cats prefer to be left alone, I spend the rest of my time fan-girling to my favorite KPOP groups, blasting <a href="https://music.youtube.com/playlist?list=PLOKyILoxmHAQrmJj2MgfsdV0GvfRaH1jx">Taylor Swift</a> on repeat, or writing fan-fiction under an anonymous penname online.</p>
+                <p> </p>
                 <p class="mb-0"></p>
             </div>
         </section>
@@ -459,7 +463,7 @@
             <h2 class="mb-5">Connect</h2>
             <p>If you're interested to know my about detailed work experience, character references or want to chat about cats in general, please don't hesitate to drop me a <a class="social-icon" href="mailto:jane.ilagan@outlook.ph"><i class="far fa-paper-plane"></i></a>
             <p class="mb-0"></p>
-           <small><p>Version update: 2023-January-18 06:19AM-PH </p></small>
+           <small><p>Version update: 2023-February-07 06:16PM-PH </p></small>
         </div>
     </section>
 
