update phone num

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <span class="text-primary">Ilagan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Mandaluyong City · Metro Manila, PH 
+                        Mandaluyong City · Metro Manila, PH · 02 8731 5692
                     </div>
                     <p class="lead mb-5">I'm an IT enthusiast with eight years of experience in the field, focused on technical leadership, system administration and engineering.
                     </p>
